fix surefire plugin