@@ -125,26 +125,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
                 <configuration>
-                    <argLine>
-                        ${mavenSurefire.argLine}
-                    </argLine>
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                    <properties>
-                        <property>
-                            <name>listener</name>
-                            <value>org.sonar.java.jacoco.JUnitListener</value>
-                        </property>
-                    </properties>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.sonarsource.java</groupId>
-                        <artifactId>sonar-jacoco-listeners</artifactId>
-                        <version>${sonar-jacoco-listeners.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <!-- For integration testing -->
             <plugin>
